# Blockchain-writen-in-pure-C

./: .gitignore  .gitmodules  CMakeLists.txt  README.MD  code.json  config  init.vim  readme.md  test-97482-a5c4ad.c
docs/: .gitignore
sources/: compile_flags.txt
sources/INCLUDE/: misc.h
sources/INCLUDE/accounts/: acc_utils.h  activation.h
sources/INCLUDE/blockdata/: blockdata.h  layering.h  merkle_process.h
sources/INCLUDE/client/: block_process.h  common.h  dhandlers_p2p.h  ipc_messages_client.h  ipc_p2p.h  p2p_event_loop.h  p2p_listen.h  p2p_settings.h  p2p_setup.h  p2p_start.h  p2ptransaction.pb-c.h  setup_client.h
sources/INCLUDE/hashing/: hashing.h
sources/INCLUDE/logging/: zlog.h
sources/INCLUDE/misc/: misc.h
sources/INCLUDE/networking/: Doxyfile  connection_handlers.h  data_handlers.h  event_loop.h  ipcmessages.h  settings.h  setup.h  setup_client.h  start_server.h  xmisc.h
sources/INCLUDE/serdes/: serdes.h  transaction.pb-c.h
sources/INCLUDE/tests/: tests.h
sources/accounts/: CMakeLists.txt  acc_utils.c  acc_utils.h  activation.c  activation.h
sources/block_data/: CMakeLists.txt  blockdata.c  blockdata.h  layering.c  layering.h  merkle_process.c  merkle_process.h
sources/client/: CMakeLists.txt  a.out  block_process.c  block_process.h  common.c  compile_flags.txt  dhandlers_p2p.c  ipc_messages_client.c  ipc_messages_client.h  ipc_p2p.c  main.c  p2p_event_loop.c  p2p_listen.c  p2p_setup.c  p2ptransaction.pb-c.c  setup_client.c  setup_client.h
sources/client/doxy_setup/: Doxyfile
sources/client/serdes_client/: p2ptransaction.pb-c.c  p2ptransaction.pb-c.h  p2ptransaction.proto
sources/hashing/: CMakeLists.txt  hashing.c  hashing.h
sources/inet_misc/: CMakeLists.txt  inet_misc.c  inet_misc.h
sources/logging/: CMakeLists.txt  zlog.conf
sources/main/: CMakeLists.txt  main.c
sources/misc/: CMakeLists.txt  compile_flags.txt  misc.c  misc.h
sources/networking/: CMakeLists.txt  Doxyfile  compile_flags.txt  connection_handlers.c  connection_handlers.h  data_handlers.c  data_handlers.h  event_loop.c  event_loop.h  ipcmessages.c  ipcmessages.h  misc.c  misc.h  report.xml  setup.c  setup.h  setup_client.c  start_server.c  start_server.h  transaction.pb-c.h  xmisc.c
sources/networking/doxy_setup/: Doxyfile
sources/puzzle/: CMakeLists.txt  puzzle.c  puzzle.h
sources/serdes/: CMakeLists.txt  __transaction  a.out  main.c  serdes.c  serdes.h  serialized  transaction.pb-c.c  transaction.pb-c.h  transaction.proto
sources/tests/: CMakeLists.txt  compile_flags.txt  tests.c  tests.h  tests2.c
vagrant_testing/: .gitignore  Vagrantfile  ansible.cfg  load_soft.yaml  setup_client.yaml  setup_testmachine.yaml  setup_vagrant
vagrant_testing/ansible_config/: hosts.yaml
vagrant_testing/host_vars/: testmachine.yaml
vagrant_testing/roles/copy_soft/defaults/: main.yml
vagrant_testing/roles/copy_soft/files/: app.out  client.app  zlog.conf
vagrant_testing/roles/copy_soft/handlers/: main.yml
vagrant_testing/roles/copy_soft/tasks/: main.yml
vagrant_testing/roles/copy_soft/tests/: test.yml
vagrant_testing/roles/copy_soft/vars/: main.yml
vagrant_testing/roles/default_setup/defaults/: main.yml
vagrant_testing/roles/default_setup/handlers/: main.yml
vagrant_testing/roles/default_setup/tasks/: main.yml
vagrant_testing/roles/default_setup/tests/: test.yml
vagrant_testing/roles/default_setup/vars/: main.yml
vagrant_testing/roles/setup_shell/defaults/: main.yml
vagrant_testing/roles/setup_shell/handlers/: main.yml
vagrant_testing/roles/setup_shell/tasks/: main.yml
vagrant_testing/roles/setup_shell/tests/: test.yml
vagrant_testing/roles/setup_shell/vars/: main.yml
